Implement face capture, training, and real-time verification
Added scripts for capturing face images, training a face embedding using facenet-pytorch, and real-time face verification. Updated environment dependencies to include torchvision and removed unused mtcnn. Updated the face embedding file with new data and logic.

--- a/env.yml
+++ b/env.yml
@@ -5,6 +5,6 @@ dependencies:
   - pip:
       - opencv-python
       - numpy
-      - facenet-pytorch
-      - mtcnn
       - torch
+      - torchvision
+      - facenet-pytorch
